<resources>
    <string name="app_name">TheTWeaks</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hint1">email or username</string>
    <string name="hint2">password</string>
    <string name="thetweaks">TheTweaks</string>
    <string name="login">Login</string>
    <string name="pass_recover">Forgot password</string>
    <string name="title_activity_explorer_">explorer_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_signup">activity_signup</string>
    <string name="db_messages">https://thetweaks-57733.firebaseio.com/messages/</string>
    <string name="db_users">https://thetweaks-57733.firebaseio.com/users</string>
    <string name="db_users_json">https://thetweaks-57733.firebaseio.com/users.json</string>
    <string name="feed_welcome_text">Let your community know the things you care about with a Tweaks of your own
    </string>
    <string name="username_prompt">\@username_tweaks</string>
    <string name="personalize_description">We\'ll use this to connect you with everyone on TheTweaks according to your
        category and place you belongs to.
    </string>
    <string name="profile_pic_prompt">Person with profile picture show up higer in the network, click above icon to
        upload (size must be less than 2MB)
    </string>
</resources>
