<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"

             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/background"
             tools:context=".LoginActivity">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/mail"
                android:paddingStart="5dp"
                android:ems="10"
                android:gravity="center"
                android:background="@drawable/edit_text"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/editText" android:layout_marginBottom="56dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.086"
                android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp" android:hint="@string/hint1" android:paddingBottom="4dp"
                android:paddingLeft="4dp" android:paddingRight="4dp" android:paddingTop="4dp"/>
        <TextView
                android:text="@string/thetweaks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView" android:textSize="50sp" app:fontFamily="sans-serif-black"

                android:textColor="#ffff" android:layout_marginTop="168dp" app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableLeft="@drawable/lock"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/editText2" android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:hint="@string/hint2"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/editText" android:paddingBottom="4dp"
                android:paddingLeft="4dp" android:paddingRight="4dp" android:paddingTop="4dp"/>
        <Button
                android:text="@string/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/button" android:layout_marginTop="20dp"
                android:background="@drawable/button_edit"

                app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"/>
        <TextView
                android:text="@string/pass_recover"
                android:layout_width="155dp"
                android:layout_height="31dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView2" app:layout_constraintHorizontal_bias="0.55" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/button" android:textSize="18sp"/>
        <TextView
                android:text="Create your Account ⟶"
                android:layout_width="230dp"
                android:layout_height="33dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="100dp" android:layout_marginStart="100dp"
                app:layout_constraintHorizontal_bias="0.0" android:textSize="18sp" android:paddingBottom="4dp"
                android:paddingLeft="4dp" android:paddingRight="4dp" android:paddingTop="4dp"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
