<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Activities.RegistrationActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/textview"
              android:text="Let's personalize your network"
              android:textSize="25dp"
              android:textStyle="bold"
              android:layout_marginTop="30dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:fontFamily="sans-serif"
              android:textColor="@android:color/background_light"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/textView2"
              android:layout_marginTop="8dp"
              android:text="@string/personalize_description"
              android:textColor="@android:color/background_light"
              android:textSize="15dp"
              android:textStyle="bold"
              android:gravity="center"
              app:layout_constraintTop_toBottomOf="@id/textview"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_marginTop="30dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="15dp"
                  android:layout_marginBottom="10dp"
                  android:background="#F5F5F5"
                  android:orientation="vertical"
                  app:layout_constraintTop_toBottomOf="@id/textView2"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:id="@+id/layout1">

        <ImageButton
                android:id="@+id/set_profile_pic"
                android:layout_width="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/profile"/>

        <TextView
                android:id="@+id/Profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile Name"
                android:textStyle="bold"
                android:textSize="24dp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="16dp"
                android:text="@string/username_prompt"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="15dp"
                  android:layout_margin="15dp"
        android:text="@string/profile_pic_prompt"/>


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="20dp"
                  android:textSize="15dp"
                  android:textColor="@android:color/black"
                    android:text="Select your category *"/>
        <Spinner
                android:id="@+id/category"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="20dp"
                  android:textSize="15dp"
                  android:textColor="@android:color/black"
                  android:text="I currently work / study Here: (optional)"/>

        <EditText android:layout_width="match_parent"
                  android:hint="Company or College name"
                  android:layout_marginLeft="20dp"
                  android:layout_marginTop="5dp"
                  android:layout_marginRight="20dp"
                  android:layout_height="wrap_content"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="20dp"
                  android:layout_marginTop="20dp"
                  android:textSize="15dp"
                  android:textColor="@android:color/black"
                  android:text="I live here: *"/>
        
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:weightSum="1"
                      android:layout_height="wrap_content">

            <Spinner
                    android:id="@+id/state_spinner"
                    android:layout_width="0dp"
                     android:layout_weight="0.4"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="10dp"
                     android:layout_height="40dp"/>

            <EditText
                    android:id="@+id/city"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:hint="City"
                    android:gravity="center_horizontal"
                    android:layout_height="40dp"/>



        </LinearLayout>

        <TextView android:layout_width="wrap_content"
                  android:layout_marginLeft="20dp"
                  android:layout_marginTop="20dp"
                  android:text="* Required Field"
                  android:layout_height="wrap_content"/>

         <Button
                 android:id="@+id/submit_btn"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:text="Submit"
                 android:textSize="20dp"
                 android:textAllCaps="false"
                 android:textStyle="bold"
                 android:textColor="@android:color/background_light"
                 android:background="#3F51B5"
                 android:layout_height="wrap_content"/>



    </LinearLayout>





</android.support.constraint.ConstraintLayout>